@@ -1,0 +1,24 @@
+package SPVM::Net::SSLeay::X509_CRL;
+
+
+
+1;
+
+=head1 Name
+
+SPVM::Net::SSLeay::X509_CRL - X509_CRL
+
+=head1 Description
+
+Net::SSLeay::X509_CRL class in L<SPVM> represents C<X509_CRL> structure in OpenSSL.
+
+=head1 Usage
+
+  use Net::SSLeay::X509_CRL;
+
+=head1 Copyright & License
+
+Copyright (c) 2024 Yuki Kimoto
+
+MIT License
+
