@@ -1,6 +1,7 @@
 0.004 2024-10-31
   [New Features]
     * Add Net::SSLeay::X509_STORE#set_flags method.
+    * Add Net::SSLeay::X509_CRL class.
   
 0.003 2024-10-30
   [New Features]
